# Chonk

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENCE  PerformanceReport.md  README.md  imgui.ini
assets/shaders/: Default.frag.glsl  Default.vert.glsl
scripts/: compile_test.sh
src/: Block.h  Chonk.cpp  Chonk.h  Curvy.cpp  Curvy.h  FixedGlobals.h
src/Debug/: Assert.h  GLError.h
src/GUI/: EngineGUI.cpp  EngineGUI.h  ImGui.cpp  ImGui.h
src/Processes/: ChunkProcess.cpp  ChunkProcess.h  MainProcess.cpp  MainProcess.h  WorldGenerator.cpp  WorldGenerator.h
src/Renderer/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  GladFunctions.cpp  GladFunctions.h  GlagFunctions.cpp  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Structs/: Block.h  Components.h  Math.h  Util.h
src/System/: App.cpp  App.h  Context.cpp  Context.h  Init.cpp  Init.h  Process.h  Scene.cpp  Scene.h  Settings.cpp  Settings.h  Window.cpp  Window.h
src/include/: Defines.h  tempData.h
submodules/glad/include/glad/: glad.h
submodules/glad/src/: glad.c
submodules/stb/: stb_image.h
